@@ -45,7 +45,7 @@ namespace MySql.Data.VisualStudio
 
                 foreach (DataRow row in parmTable.Rows)
                 {
-                    if (row["IS_RESULT"].Equals("YES")) continue;
+                    if (row["ORDINAL_POSITION"].Equals(0)) continue;
 
                     DbParameter p = cmd.CreateParameter();
                     p.ParameterName = row["PARAMETER_NAME"].ToString();
@@ -56,10 +56,14 @@ namespace MySql.Data.VisualStudio
                 using (IDataReader reader = cmd.ExecuteReader(CommandBehavior.SchemaOnly))
                 {
                     DataTable dt = reader.GetSchemaTable();
-
                     dt.Columns.Add(new DataColumn("RoutineName", typeof(string)));
                     foreach (DataRow row in dt.Rows)
+                    {
                         row["RoutineName"] = restrictions[2];
+                        string basedb = row["BaseSchemaName"] as string;
+                        if (String.IsNullOrEmpty(basedb) || row["BaseSchemaName"] == DBNull.Value)
+                            row["BaseSchemaName"] = cmd.Connection.Database;
+                    }
 
                     return new AdoDotNetDataTableReader(dt);
                 }
