@@ -9,6 +9,8 @@ Version 5.2.4 -
   as of 1.9.1 did not support the methods needed for hashed passwords (bug #38895)
 - fixed problem where negative time values with a zero hour would return as postive
   values (bug #39294)  
+- fixed problem where using a stored procedure with parameters with a table adapter
+  was no longer working after our parameter schema changes (bug #39252)  
   
 Version 5.2.3 - 8/14/08
 - Increased the speed of MySqlDataReader.GetOrdinal dramatically by using a couple
